LPC2019: Generalise Makefile, add pdf target
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/LinuxPlumbers2019/Makefile
+++ b/conference/LinuxPlumbers2019/Makefile
@@ -1,8 +1,20 @@
 # FIXME: This should be more generic and included everywhere; but works for now
 
 BUILD_SCRIPT := ../emacs.d/build-slides.sh
+BUILD_PDF_SCRIPT := ../build-pdf.sh
+DECKTAPE := decktape --chrome-arg=--no-sandbox
+HTML := xdp-distro-view.html
+PDF := ${HTML:.html=.pdf}
 
-all: xdp-distro-view.html
+html: $(HTML)
+pdf: $(PDF)
 
-xdp-distro-view.html: xdp-distro-view.org
-	$(BUILD_SCRIPT) xdp-distro-view.org
+all: html
+
+$(HTML): %.html: %.org
+	$(BUILD_SCRIPT) "$<"
+
+
+$(PDF): %.pdf: %.html
+	$(BUILD_PDF_SCRIPT) "$<" "$(DECKTAPE)"
+
