LPC2019: Move Makefile logic to common.mk
Makes it easy to add the Makefile to other directories

Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/LinuxPlumbers2019/Makefile
+++ b/conference/LinuxPlumbers2019/Makefile
@@ -1,20 +1,4 @@
-# FIXME: This should be more generic and included everywhere; but works for now
 
-BUILD_SCRIPT := ../emacs.d/build-slides.sh
-BUILD_PDF_SCRIPT := ../build-pdf.sh
-DECKTAPE := decktape --chrome-arg=--no-sandbox
-HTML := xdp-distro-view.html
-PDF := ${HTML:.html=.pdf}
+ORG_FILES := xdp-distro-view.org
 
-html: $(HTML)
-pdf: $(PDF)
-
-all: html
-
-$(HTML): %.html: %.org
-	$(BUILD_SCRIPT) "$<"
-
-
-$(PDF): %.pdf: %.html
-	$(BUILD_PDF_SCRIPT) "$<" "$(DECKTAPE)"
-
+include ../common.mk
