--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ deploy:
   local_dir: build/
   on:
     branch: master
+before_install:
+- openssl aes-256-cbc -K $encrypted_f89b29d79295_key -iv $encrypted_f89b29d79295_iv
+  -in .deploy.key.enc -out .deploy.key -d
