.github/workflows: Set DEBUG envvar
Makes the pages build more verbose, which hopefully will make it visible
what's going on when the build fails...

Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      DEBUG: 1
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
