conference/LLC2022: Add xdp-trafficgen slides
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/LLC2022/Makefile
+++ b/conference/LLC2022/Makefile
@@ -1,3 +1,3 @@
 # Two make targets: html and pdf
-ORG_FILES := xdp_hints_hw_metadata.org
+ORG_FILES := xdp_hints_hw_metadata.org xdp-trafficgen.org
 include ../common.mk
