--- a/conference/DrivingIT2022/Makefile
+++ b/conference/DrivingIT2022/Makefile
@@ -1,3 +1,3 @@
 # Two make targets: html and pdf
-ORG_FILES := ebpf-intro.org
+ORG_FILES := ebpf-intro.org its-the-latency.org
 include ../common.mk
